2002 May 24

    * STEngine: engineForLanguage: renamed to engineForLanguageWithName:.
    Some method documentation added.
    * STExecutor: reflect method renaming
    * STLanguage: read default language name from actual user defaults (not 
    from the StepTalk domain) and renamed the key to STDefaultLanguageName. 
    Renamed languageWithBundle: to languageWithPath:. Some method documentation 
    added.
    * STEnvironmentDescription: read default description name from actual user 
    defaults (not from the StepTalk domain)
    * STEnvironment: Some method documentation added.
    * StepTalk.gsdoc: new file

2002 May 13
    
    * Uploaded to the GNUstep CVS repository by Adam Fedor
    
2002 Apr 20

    * COPYING: updated
    * STExterns: Removed unused exceptions
    * STStructure: Changed exception to STInternalIncosistencyException
        
2002 Apr 13

    * Modules/GNUmakefile: added option that disables making of appkit support
    Use make appkit=no.
    * Separated AppTalk
     
2002 Mar 21
    
    * STEnvironment: removed pools

2002 Mar 17

    * STEngine: removed executeScript: methods and use only executeSource:
      engine does not make difference between script and statements anymore
    * Tools: removed --expressions option
    * Examples: fixed Smalltalk examples to use new grammar
    * STLanguage: new method languageNameForFileType:

2002 Mar 13

    * AppKit module: removed old AppKit constants and renamed MiddleButton
    events to OtherButton.

2002 Feb 14

    * added make option 'appkit'. if you set it to 'no' (make appkit=no), 
    no appkit stuff will be compiled. 
    
2002 Feb 5

    * StepTalk 0.5.0 released

2002 Feb 5

    * STSelector: new file
    * NSInvocation+additions: handle SEL type with STSelector
    * Examples: added selector.st, notification.st, scope.st and pldes.st

2002 Feb 3

    * Testing: new directory
    
2002 Jan 30

    * STEnvironment: Removed unused variables,
    
2002 Jan 23
